refactor tx_service using tx union type
