# openapi_server/models/txs_eth.py
@@ -1,102 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from openapi_server.models.base_model_ import Model
-from openapi_server.models.tx_eth import TxEth
-from openapi_server import util
-
-from openapi_server.models.tx_eth import TxEth  # noqa: E501
-
-class TxsEth(Model):
-    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, next_page=None, txs=None):  # noqa: E501
-        """TxsEth - a model defined in OpenAPI
-
-        :param next_page: The next_page of this TxsEth.  # noqa: E501
-        :type next_page: str
-        :param txs: The txs of this TxsEth.  # noqa: E501
-        :type txs: List[TxEth]
-        """
-        self.openapi_types = {
-            'next_page': str,
-            'txs': List[TxEth]
-        }
-
-        self.attribute_map = {
-            'next_page': 'next_page',
-            'txs': 'txs'
-        }
-
-        self._next_page = next_page
-        self._txs = txs
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'TxsEth':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The txs_eth of this TxsEth.  # noqa: E501
-        :rtype: TxsEth
-        """
-        return util.deserialize_model(dikt, cls)
-
-    def to_dict(self, prefix=""):
-        """Returns the model as a dict:
-
-        :return: The TxsEth as a dict
-        :rtype: dict
-        """
-        return { 'next_page': self._next_page,
-            'txs': self._txs }
-
-
-    @property
-    def next_page(self):
-        """Gets the next_page of this TxsEth.
-
-
-        :return: The next_page of this TxsEth.
-        :rtype: str
-        """
-        return self._next_page
-
-    @next_page.setter
-    def next_page(self, next_page):
-        """Sets the next_page of this TxsEth.
-
-
-        :param next_page: The next_page of this TxsEth.
-        :type next_page: str
-        """
-
-        self._next_page = next_page
-
-    @property
-    def txs(self):
-        """Gets the txs of this TxsEth.
-
-
-        :return: The txs of this TxsEth.
-        :rtype: List[TxEth]
-        """
-        return self._txs
-
-    @txs.setter
-    def txs(self, txs):
-        """Sets the txs of this TxsEth.
-
-
-        :param txs: The txs of this TxsEth.
-        :type txs: List[TxEth]
-        """
-
-        self._txs = txs
